# vesper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: Cargo.toml  README.md  argument-choices.rs  autocompleting-arguments.rs  basic-bot.rs  custom-types.rs  shared-data.rs  using-checks.rs  using-dedicated-tasks.rs  using-groups.rs  using-hooks.rs  using-modals.rs
macros/: Cargo.toml
macros/src/: argument.rs  before.rs  command.rs  lib.rs  parse.rs
src/: argument.rs  command.rs  group.rs  hook.rs  iter.rs  lib.rs  parse.rs  parse_impl.rs  waiter.rs
vesper/: Cargo.toml  README.md
vesper-macros/: Cargo.toml  README.md
vesper-macros/src/: after.rs  autocomplete.rs  before.rs  check.rs  error_handler.rs  hook.rs  lib.rs  modal.rs  parse.rs  util.rs
vesper-macros/src/command/: argument.rs  details.rs  mod.rs
vesper-macros/src/extractors/: closure.rs  either.rs  function_closure.rs  function_path.rs  list.rs  map.rs  mod.rs
vesper/src/: argument.rs  builder.rs  command.rs  context.rs  error.rs  extract.rs  framework.rs  group.rs  hook.rs  iter.rs  lib.rs  localizations.rs  modal.rs  parse.rs  parse_impl.rs  parsers.rs  range.rs  wait.rs
zephyrus/: Cargo.toml  LICENSE  README.md
zephyrus-macros/: Cargo.toml  README.md
zephyrus-macros/src/: after.rs  argument.rs  attr.rs  autocomplete.rs  before.rs  check.rs  command.rs  details.rs  either.rs  error_handler.rs  futurize.rs  hook.rs  lib.rs  list.rs  modal.rs  optional.rs  options.rs  parse.rs  util.rs
zephyrus-macros/src/command/: argument.rs  details.rs  mod.rs
zephyrus-macros/src/extractors/: either.rs  function_path.rs  ident.rs  map.rs  mod.rs  tuple.rs
zephyrus/src/: argument.rs  builder.rs  command.rs  context.rs  extract.rs  framework.rs  group.rs  hook.rs  iter.rs  lib.rs  message.rs  modal.rs  parse.rs  parse_impl.rs  range.rs  returnable.rs  traits.rs  wait.rs  waiter.rs
