[package]
name = "zephyrus"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
macros = { path = "./macros" }
parking_lot = "0.11"
tracing = "0.1"
twilight-model = "0.7"
twilight-http = "0.7"

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync"]
