[package]
name = "macros"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "=1.0.26"