[package]
name = "zephyrus-macros"
version = "0.4.0"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2018"
description = "Procedural macros used by Zephyrus"
readme = "../README.md"
repository = "https://github.com/AlvaroMS25/zephyrus"
license = "MIT"
keywords = ["async", "twilight", "discord", "slash-command"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1"