[package]
name = "zephyrus"
version = "0.4.0"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2018"
description = "A slash-command framework meant to be used with twilight"
readme = "../README.md"
repository = "https://github.com/AlvaroMS25/zephyrus"
license = "MIT"
keywords = ["async", "twilight", "discord", "slash-command"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
zephyrus-macros = "^0.4"
parking_lot = "0.12"
tracing = "0.1"
twilight-model = "0.13"
twilight-http = "0.13"

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync"]

[features]
rc = []
