[package]
name = "zephyrus"
version = "0.6.0"
authors = ["Alvaro <62391364+AlvaroMS25@users.noreply.github.com>"]
edition = "2018"
description = "A slash-command framework meant to be used with twilight"
readme = "README.md"
repository = "https://github.com/AlvaroMS25/zephyrus"
license = "MIT"
keywords = ["async", "twilight", "discord", "slash-command"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
zephyrus-macros = { path = "../zephyrus-macros", version = "0.6" }
parking_lot = "0.12"
tracing = "0.1"
twilight-model = "0.14"
twilight-http = "0.14"

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync"]

[features]
rc = []
